--- a/src/app/pages/concrete-product/concrete-product.component.html
+++ b/src/app/pages/concrete-product/concrete-product.component.html
@@ -78,22 +78,7 @@
     </div>
     <div class="container">
       <common-carousel [images]="this.product.imagesUrls"></common-carousel>
-      <common-title-text-card
-        class="product-data-field"
-        title="Name"
-        [text]="this.product.name"
-      ></common-title-text-card>
-      <common-title-text-card
-        class="product-data-field"
-        title="Category"
-        [text]="getCategory()"
-      ></common-title-text-card>
-      <common-title-text-card
-        *ngIf="hasDescription()"
-        class="product-data-field"
-        title="Description"
-        [text]="this.product.description ?? ''"
-      ></common-title-text-card>
+      <concrete-product-data-fields [product]="this.product"></concrete-product-data-fields>
     </div>
   </div>
 </div>
