--- a/src/app/pages/concrete-product/concrete-product.component.html
+++ b/src/app/pages/concrete-product/concrete-product.component.html
@@ -49,32 +49,7 @@
       <p class="publishing-info__date">
         Published: {{ product.createdAt | date: "cccc, dd MMMM HH:mm" }}
       </p>
-      <div class="publishing-info__author">
-        <span class="publishing-info__author-description">Author: </span>
-        <a
-          class="publishing-info__author-link"
-          mat-raised-button
-          matTooltip="Go to author profile"
-          matTooltipClass="tooltip"
-          color="accent"
-          [routerLink]="'/user/' + this.product.userId"
-          aria-label="Go to author profile"
-        >
-          {{ this.userNameOrDefault }}
-        </a>
-        <a
-          class="publishing-info__author-message"
-          [disabled]="true"
-          mat-raised-button
-          color="accent"
-          href="/users/mockid/write"
-          aria-label="Write message to author"
-          matTooltip="Write message"
-          matTooltipClass="tooltip"
-        >
-          <mat-icon>message</mat-icon>
-        </a>
-      </div>
+      <concrete-product-page-author [product]="this.product"></concrete-product-page-author>
     </div>
     <div class="container">
       <common-carousel [images]="this.product.imagesUrls"></common-carousel>
