bugfix: global ::ng-deep

--- a/src/app/pages/concrete-product/concrete-product.component.scss
+++ b/src/app/pages/concrete-product/concrete-product.component.scss
@@ -22,8 +22,7 @@ p {
   margin: 0;
 }
 
-// for some reason tooltip not accessible without ::ng-deep
-::ng-deep .tooltip {
+:host ::ng-deep .tooltip {
   font-size: 1.6rem !important;
 }
 
