increase file size to 10mb

--- a/src/app/pages/manage-product/create-product/create-product.component.html
+++ b/src/app/pages/manage-product/create-product/create-product.component.html
@@ -19,7 +19,10 @@
         [(model)]="productDescriptionField"
       ></common-product-description-field>
 
-      <common-image-drag-and-drop #imagesDragAndDrop maxFileSize="5MB"></common-image-drag-and-drop>
+      <common-image-drag-and-drop
+        #imagesDragAndDrop
+        maxFileSize="10MB"
+      ></common-image-drag-and-drop>
       <button
         class="create-product-button"
         [disabled]="this.isSubmitButtonLocked"
