add login or manage button, move preferences to menu

--- a/src/app/app/navbar/navbar.component.html
+++ b/src/app/app/navbar/navbar.component.html
@@ -9,13 +9,6 @@
   </nav>
   <span class="navbar__spacer" role="none"></span>
   <nav aria-label="right navigation">
-    <ul class="list list-horizontal">
-      <li class="link-container">
-        <common-preferences-link></common-preferences-link>
-      </li>
-      <li class="link-container">
-        <common-login-button></common-login-button>
-      </li>
-    </ul>
+    <common-login-or-manage-button></common-login-or-manage-button>
   </nav>
 </mat-toolbar>
