--- a/src/app/common/components/buttons/buttons/account-actions/account-actions.component.html
+++ b/src/app/common/components/buttons/buttons/account-actions/account-actions.component.html
@@ -3,5 +3,6 @@
 </button>
 <mat-menu #menu="matMenu">
   <common-go-to-profile-menu-link></common-go-to-profile-menu-link>
+  <common-go-to-preferences-menu-link></common-go-to-preferences-menu-link>
   <common-logout-menu-button (onLogout)="this.onLogoutClick()"></common-logout-menu-button>
 </mat-menu>
