add dynamic themes support

--- a/src/app/app/app.component.html
+++ b/src/app/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="pink-blue-grey-theme app-container">
+<div class="app-container" [ngClass]="getTheme()">
   <common-themed-div class="background"></common-themed-div>
 
   <header>
