add theme toggler

--- a/src/app/app/navbar/navbar.component.html
+++ b/src/app/app/navbar/navbar.component.html
@@ -9,6 +9,13 @@
   </nav>
   <span class="navbar__spacer" role="none"></span>
   <nav aria-label="right navigation">
-    <common-login-or-manage-button></common-login-or-manage-button>
+    <ul class="list list-horizontal">
+      <li class="link-container theme-toggler">
+        <common-theme-toggler></common-theme-toggler>
+      </li>
+      <li class="link-container">
+        <common-login-or-manage-button></common-login-or-manage-button>
+      </li>
+    </ul>
   </nav>
 </mat-toolbar>
