--- a/src/app/app/navbar/navbar.component.scss
+++ b/src/app/app/navbar/navbar.component.scss
@@ -14,3 +14,12 @@
     flex-basis: auto;
   }
 }
+
+.link-container {
+  display: flex;
+  align-items: center;
+}
+
+.theme-toggler {
+  margin-right: 1rem;
+}
