--- a/src/app/common/components/buttons/buttons/account-actions/account-actions.component.html
+++ b/src/app/common/components/buttons/buttons/account-actions/account-actions.component.html
@@ -1,4 +1,9 @@
-<button class="menu-toggler" [mat-menu-trigger-for]="menu" mat-icon-button>
+<button
+  class="menu-toggler"
+  [mat-menu-trigger-for]="menu"
+  mat-icon-button
+  aria-label="Open user actions"
+>
   <img class="menu-toggler__image" [src]="this.getAvatarSource()" />
 </button>
 <mat-menu #menu="matMenu">
