--- a/src/app/pages/products/search/search.component.scss
+++ b/src/app/pages/products/search/search.component.scss
@@ -6,7 +6,14 @@
   width: 100%;
 }
 
-// disable default material padding bottom
-:host ::ng-deep .mat-form-field-wrapper {
-  padding-bottom: 0;
+:host ::ng-deep {
+  // disable default material paddings and margins
+  .mat-form-field-wrapper {
+    top: -0.5em;
+    padding-bottom: 0;
+    margin: 0;
+  }
+  .mat-form-field-flex {
+    margin-top: 0px !important;
+  }
 }
