--- a/src/app/pages/products/product-page.component.scss
+++ b/src/app/pages/products/product-page.component.scss
@@ -10,7 +10,13 @@
   background-color: transparent;
 }
 
-.search {
-  width: 80%;
-  margin: 1rem auto;
+.search-container {
+  display: flex;
+  margin: 1rem 0;
+  height: 6.6rem;
+}
+
+.filters-toggler {
+  margin-right: 0.5rem;
+  min-width: fit-content;
 }
