add fixed button number

--- a/src/app/common/components/core/paginator/paginator.component.html
+++ b/src/app/common/components/core/paginator/paginator.component.html
@@ -8,21 +8,12 @@
     <mat-icon>navigate_before</mat-icon>
   </button>
 
-  <ng-template [ngFor] let-beforePage [ngForOf]="nearbyPreviousPages">
-    <button mat-button (click)="changePage(beforePage)">
-      {{ beforePage }}
-    </button>
-  </ng-template>
-
-  <button mat-raised-button color="primary">
-    {{ currentPage }}
-  </button>
-
-  <ng-template [ngFor] let-nextPage [ngForOf]="nearbyNextPages">
-    <button mat-button (click)="changePage(nextPage)">
-      {{ nextPage }}
-    </button>
-  </ng-template>
+  <paginator-page-button
+    *ngFor="let page of getPagesSlice()"
+    [pageNumber]="page"
+    [isActive]="this.isPageActive(page)"
+    (onClick)="this.changePage(page)"
+  ></paginator-page-button>
 
   <button [disabled]="isNextLocked()" mat-raised-button color="primary" (click)="onNextClick()">
     <mat-icon>navigate_next</mat-icon>
