remove material paginator, add custom paginator

--- a/src/app/pages/products/products-page.component.html
+++ b/src/app/pages/products/products-page.component.html
@@ -19,14 +19,12 @@
       class="card-container"
       [products]="(this.products$ | async) ?? []"
     ></common-products-container>
-
-    <mat-paginator
-      class="paginator"
-      [length]="this.totalProducts"
-      [pageSize]="this.pageSize"
-      [pageSizeOptions]="pageSizeOptions"
-      (page)="this.onPaginationUpdate($event)"
-    >
-    </mat-paginator>
   </div>
+  <common-paginator
+    class="paginator"
+    [totalItems]="this.totalProducts"
+    [itemsPerPage]="this.pageSize"
+    [currentPage]="this.pageIndex + 1"
+    (onPageChange)="onPaginationUpdate($event)"
+  ></common-paginator>
 </product-page-filters-sidebar>
