--- a/src/app/pages/products/product-page.component.scss
+++ b/src/app/pages/products/product-page.component.scss
@@ -5,9 +5,7 @@
 
 .paginator {
   max-width: fit-content;
-  margin: 0 auto;
-
-  background-color: transparent;
+  margin: 2rem auto;
 }
 
 .search-container {
