--- a/src/app/pages/products/search/search.component.html
+++ b/src/app/pages/products/search/search.component.html
@@ -1,4 +1,4 @@
-<mat-form-field class="search-field" appearance="outline">
+<mat-form-field class="search-field" appearance="fill">
   <mat-label>Search</mat-label>
   <input #searchInput [value]="this.initialSearch" type="text" matInput />
   <mat-icon matSuffix>search</mat-icon>
