add avatar styles

--- a/src/app/pages/user/user-page.component.scss
+++ b/src/app/pages/user/user-page.component.scss
@@ -13,13 +13,17 @@
   width: 100%;
   aspect-ratio: 1;
   height: auto;
+
   border-radius: 50%;
+  box-shadow: 0 0 10px rgba(black, 0.5);
 }
 
 .avatar-wrapper {
   padding: 1rem;
   margin: 0 auto;
+
   max-height: 50rem;
+  max-width: 50rem;
 }
 
 .user-profile {
