change section logo color

--- a/src/app/pages/manage-product/create-product/create-product.component.html
+++ b/src/app/pages/manage-product/create-product/create-product.component.html
@@ -1,7 +1,7 @@
 <div class="component-root">
   <common-titled-page-header title="Create product"></common-titled-page-header>
   <div class="container">
-    <mat-icon class="section-logo">rocket_launch</mat-icon>
+    <mat-icon class="section-logo" color="primary">rocket_launch</mat-icon>
     <form class="form-container">
       <common-product-name-form-field [(model)]="productNameField"></common-product-name-form-field>
       <div class="price-category-container">
