--- a/src/app/pages/manage-product/create-product/create-product.component.scss
+++ b/src/app/pages/manage-product/create-product/create-product.component.scss
@@ -1,3 +1,5 @@
+@import "src/styles/mixins.scss";
+
 .price-category-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -32,11 +34,7 @@
 }
 
 .section-logo {
-  display: block;
-  margin: 1rem auto;
-  height: min(30vw, 25rem);
-  width: min(30vw, 25rem);
-  font-size: min(30vw, 25rem);
+  @include section-logo();
 }
 
 .description-field {
