--- a/src/app/pages/user/edit-user/edit-user.page.html
+++ b/src/app/pages/user/edit-user/edit-user.page.html
@@ -1,9 +1,13 @@
 <common-titled-page-header title="Edit account"></common-titled-page-header>
 <div class="container">
   <mat-icon class="section-logo" color="primary">manage_accounts</mat-icon>
-  <form>
-    <common-user-name-form-field></common-user-name-form-field>
-    <common-multiline-field label="Tell about you" [maxLength]="500"></common-multiline-field>
+  <form *ngIf="this.loaded">
+    <common-user-name-form-field [(model)]="nameModel"></common-user-name-form-field>
+    <common-multiline-field
+      [(model)]="aboutModel"
+      label="Tell about you"
+      [maxLength]="500"
+    ></common-multiline-field>
 
     <div class="form-actions">
       <button (click)="onDiscard()" mat-raised-button color="accent" type="button">Discard</button>
