add minimal image size

--- a/src/app/common/components/drag-and-drop/image/image-dad.component.scss
+++ b/src/app/common/components/drag-and-drop/image/image-dad.component.scss
@@ -15,7 +15,7 @@
 
   // 2 columns
   @media (min-width: 50rem) {
-    width: calc(50% - 0.5em);
+    width: max(calc(50% - 0.5em), 30rem);
   }
 
   // 3 columns
