add filter by category

--- a/src/app/pages/products/filters/filters-sidebar.component.html
+++ b/src/app/pages/products/filters/filters-sidebar.component.html
@@ -18,7 +18,7 @@
           </div>
         </common-themed-div>
 
-        <common-product-category-autocomplete [required]="false" [(model)]="category">
+        <common-product-category-autocomplete [required]="false" [(model)]="categoryModel">
         </common-product-category-autocomplete>
 
         <mat-form-field class="sidebar__sorting-select" appearance="fill">
