--- a/src/app/pages/products/product-page.component.scss
+++ b/src/app/pages/products/product-page.component.scss
@@ -1,6 +1,8 @@
+@import "src/app/app/app.component.scss";
+
 :host {
   display: block;
-  height: calc(100% - 6.4rem);
+  min-height: $content-height;
 }
 
 .paginator {
