bugfix: global ng-deep

--- a/src/app/app/app.component.scss
+++ b/src/app/app/app.component.scss
@@ -21,6 +21,6 @@ $content-height: calc(100vh - 6.4rem);
   height: 100vh;
 }
 
-::ng-deep ng-component {
+:host ::ng-deep ng-component {
   min-height: $content-height;
 }
