bugfix: add missing submit button styles

--- a/src/app/pages/manage-product/update-product/update-product.component.html
+++ b/src/app/pages/manage-product/update-product/update-product.component.html
@@ -30,8 +30,14 @@
       [initialFiles]="this.imagesSnapshot"
       maxFileSize="10MB"
     ></common-image-drag-and-drop>
-    <button [disabled]="this.isUpdateLocked()" mat-raised-button color="primary" type="submit">
-      Save
+    <button
+      class="submit-button"
+      [disabled]="this.isUpdateLocked()"
+      mat-raised-button
+      color="primary"
+      type="submit"
+    >
+      <span>Save</span>
     </button>
   </form>
 </div>
