--- a/src/app/pages/manage-product/update-product/update-product.component.scss
+++ b/src/app/pages/manage-product/update-product/update-product.component.scss
@@ -5,3 +5,12 @@
   margin: 0 auto;
   margin-top: 5rem;
 }
+
+.submit-button {
+  display: block;
+  width: 20vw;
+  height: 8rem;
+
+  margin: 0 auto;
+  margin-bottom: 2rem;
+}
