--- a/src/app/pages/manage-product/update-product/update-product.component.html
+++ b/src/app/pages/manage-product/update-product/update-product.component.html
@@ -7,6 +7,7 @@
 ></mat-spinner>
 
 <div *ngIf="product" class="container">
+  <mat-icon class="section-logo" color="primary">edit_note</mat-icon>
   <form (submit)="onUpdate()">
     <common-product-name-form-field
       [(model)]="this.productNameField"
@@ -30,14 +31,26 @@
       [initialFiles]="this.imagesSnapshot"
       maxFileSize="10MB"
     ></common-image-drag-and-drop>
-    <button
-      class="submit-button"
-      [disabled]="this.isUpdateLocked()"
-      mat-raised-button
-      color="primary"
-      type="submit"
-    >
-      <span>Save</span>
-    </button>
+    <div class="form-actions">
+      <button
+        class="big-button"
+        [disabled]="this.isUpdateLocked()"
+        mat-raised-button
+        color="accent"
+        type="button"
+      >
+        <span>Discard</span>
+      </button>
+
+      <button
+        class="big-button"
+        [disabled]="this.isUpdateLocked()"
+        mat-raised-button
+        color="primary"
+        type="submit"
+      >
+        <span>Save</span>
+      </button>
+    </div>
   </form>
 </div>
