--- a/src/app/pages/manage-product/update-product/update-product.component.html
+++ b/src/app/pages/manage-product/update-product/update-product.component.html
@@ -34,6 +34,7 @@
     <div class="form-actions">
       <button
         class="big-button"
+        (click)="this.onDiscard()"
         [disabled]="this.isUpdateLocked()"
         mat-raised-button
         color="accent"
