--- a/src/styles/owl-carousel.scss
+++ b/src/styles/owl-carousel.scss
@@ -34,6 +34,8 @@
     position: absolute;
     display: inline;
 
+    text-shadow: 0px 0px 20px rgba(black, 0.5);
+
     font-size: 6.4rem;
 
     top: calc(50% - 2px);
