--- a/src/app/common/components/drag-and-drop/image/image-dad.component.scss
+++ b/src/app/common/components/drag-and-drop/image/image-dad.component.scss
@@ -31,6 +31,7 @@
     border-radius: 1rem;
     outline: 2px solid gray;
     overflow: hidden;
+    cursor: default;
   }
 
   .filepond--panel-root,
@@ -42,6 +43,7 @@
   // gets color from outside instead default gray
   .filepond--drop-label {
     color: unset;
+    cursor: pointer;
 
     // add pointer to drop title
     label {
