make component reactive

--- a/src/app/common/components/buttons/buttons/account-actions/account-actions.component.html
+++ b/src/app/common/components/buttons/buttons/account-actions/account-actions.component.html
@@ -8,5 +8,5 @@
 </button>
 <mat-menu #menu="matMenu">
   <common-go-to-profile-menu-link></common-go-to-profile-menu-link>
-  <common-logout-menu-button (onLogout)="this.onLogoutClick()"></common-logout-menu-button>
+  <common-logout-menu-button></common-logout-menu-button>
 </mat-menu>
