--- a/src/app/common/components/chat/container/chats-container.component.html
+++ b/src/app/common/components/chat/container/chats-container.component.html
@@ -1,1 +1,3 @@
-<common-chat-item *ngFor="let chat of this.chats" [chat]="chat"></common-chat-item>
+<a *ngFor="let chat of this.chats" [routerLink]="getChatReference(chat.id)">
+  <common-chat-item [chat]="chat"></common-chat-item>
+</a>
