--- a/src/app/pages/chat-pages/concrete-chat/header/concrete-chat-navbar.component.scss
+++ b/src/app/pages/chat-pages/concrete-chat/header/concrete-chat-navbar.component.scss
@@ -3,6 +3,10 @@
 }
 
 .navbar {
+  // top radius
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+
   &__image {
     display: block;
     height: 90%;
@@ -15,6 +19,6 @@
     object-fit: cover;
   }
   &__chat-name {
-    font-size: 4rem;
+    font-size: 2.5rem;
   }
 }
