--- a/src/app/pages/chat-pages/concrete-chat/top-navbar/top-navbar.component.html
+++ b/src/app/pages/chat-pages/concrete-chat/top-navbar/top-navbar.component.html
@@ -1,11 +1,13 @@
-<mat-toolbar class="navbar" color="accent">
-  <button mat-icon-button (click)="onBackClick()">
-    <mat-icon>arrow_back</mat-icon>
-  </button>
-  <img
-    class="navbar__image"
-    [src]="this.chat.chatImage"
-    [alt]="'avatar of ' + this.chat.chatName"
-  />
-  <h3 class="navbar__chat-name">{{ chat.chatName }}</h3>
-</mat-toolbar>
+<ng-template [ngIf]="chat !== null">
+  <mat-toolbar class="navbar" color="accent">
+    <button mat-icon-button (click)="onBackClick()">
+      <mat-icon>arrow_back</mat-icon>
+    </button>
+    <img
+      class="navbar__image"
+      [src]="this.chat.chatImage"
+      [alt]="'avatar of ' + this.chat.chatName"
+    />
+    <h3 class="navbar__chat-name">{{ chat.chatName }}</h3>
+  </mat-toolbar>
+</ng-template>
