--- a/src/app/pages/chat-pages/concrete-chat/messages-box/messages-box.component.html
+++ b/src/app/pages/chat-pages/concrete-chat/messages-box/messages-box.component.html
@@ -1,1 +1,16 @@
-<mat-card class="component-root"></mat-card>
+<mat-card class="component-root">
+  <div class="messages-wrapper">
+    <div class="messages-inner">
+      <ng-template ngFor [ngForOf]="messages" let-message>
+        <common-chat-message
+          class="message"
+          [ngClass]="getMessageClass(message)"
+          [color]="getMessageColor(message)"
+          [text]="message.text"
+          [time]="message.createdAt"
+        >
+        </common-chat-message>
+      </ng-template>
+    </div>
+  </div>
+</mat-card>
