--- a/src/app/pages/chat-pages/concrete-chat/messages-box/messages-box.component.scss
+++ b/src/app/pages/chat-pages/concrete-chat/messages-box/messages-box.component.scss
@@ -4,6 +4,8 @@
 }
 
 .component-root {
+  position: relative;
+
   display: flex;
   flex-direction: column;
 
@@ -14,25 +16,23 @@
 }
 
 .messages-container {
-  position: relative;
+  position: absolute;
+  bottom: 0;
 
   // vertical scroll
   overflow-y: auto;
 
-  flex-grow: 1;
+  width: 100%;
+  max-height: 100%;
 }
 
 .messages-wrapper {
-  position: absolute;
-
-  padding: 0 1rem;
-
-  width: 100%;
-}
-
-.messages-inner {
   display: flex;
   flex-direction: column-reverse;
+
+  padding: 0 0.5rem;
+
+  width: 100%;
 }
 
 .message {
