--- a/src/app/common/components/core/page-header/page-header.component.scss
+++ b/src/app/common/components/core/page-header/page-header.component.scss
@@ -1,4 +1,7 @@
-$inner-shadow-top: 0 8px 10px -6px rgba(black, 0.3) inset;
+:host {
+  display: block;
+  position: relative;
+}
 
 .component-root {
   height: 6rem;
@@ -10,5 +13,4 @@ $inner-shadow-top: 0 8px 10px -6px rgba(black, 0.3) inset;
   align-items: center;
 
   padding: 0 16px;
-  box-shadow: $inner-shadow-top;
 }
