--- a/src/app/common/components/chat/message/chat-text-message.component.scss
+++ b/src/app/common/components/chat/message/chat-text-message.component.scss
@@ -22,12 +22,46 @@ p {
   // display \n
   white-space: pre-line;
 }
+.message-end {
+  display: inline-flex;
+
+  float: right;
+}
 
 .time {
   margin-left: 1rem;
-  float: right;
 
   opacity: 0.6;
 
   font-size: 1.2rem;
+}
+.viewed-by-wrapper {
+  display: inline-block;
+  align-items: center;
+}
+
+.viewed-by-inner {
+  display: flex;
+  align-items: center;
+
+  height: 100%;
+}
+
+.view-status-icon {
+  display: inline-block;
+
+  $icon-size: 1.8rem;
+  font-size: $icon-size;
+  height: $icon-size;
+  width: $icon-size;
+
+  opacity: 0.5;
+
+  &--others {
+    margin-left: -0.8rem;
+  }
+}
+
+.viewed {
+  opacity: 1;
 }
