--- a/src/app/pages/chat-pages/concrete-chat/messages-box/messages-box.component.html
+++ b/src/app/pages/chat-pages/concrete-chat/messages-box/messages-box.component.html
@@ -2,14 +2,13 @@
   <div class="messages-container" #scrollContainer>
     <div class="messages-wrapper">
       <ng-template ngFor [ngForOf]="messages" let-message>
-        <common-chat-message
+        <common-chat-text-message
           class="message"
           [ngClass]="getMessageClass(message)"
           [color]="getMessageColor(message)"
-          [text]="message.text"
-          [time]="message.createdAt"
+          [message]="message"
         >
-        </common-chat-message>
+        </common-chat-text-message>
       </ng-template>
     </div>
   </div>
