bugfix: invalid message viewed cheker

--- a/src/app/common/components/chat/message/chat-text-message.component.html
+++ b/src/app/common/components/chat/message/chat-text-message.component.html
@@ -5,7 +5,7 @@
       <span class="message-end">
         <span class="viewed-by-wrapper">
           <span class="viewed-by-inner">
-            <mat-icon class="view-status-icon" [ngClass]="{ viewed: this.isViewedByCurrentUser() }">
+            <mat-icon class="view-status-icon" [ngClass]="{ viewed: this.isViewedBySender() }">
               done
             </mat-icon>
             <mat-icon
