add text api symbols limit

--- a/src/app/pages/chat-pages/concrete-chat/bottom-navbar/bottom-navbar.component.html
+++ b/src/app/pages/chat-pages/concrete-chat/bottom-navbar/bottom-navbar.component.html
@@ -2,6 +2,7 @@
   <div class="message-container">
     <textarea
       [(ngModel)]="messageInputText"
+      [maxlength]="500"
       (keydown.control.enter)="onSendMessage()"
       placeholder="Message"
       class="message-input"
